# cspan_congressionalrhetoric_fusion_baseline

./: .gitignore  README.md  config_base.py  inference.py  main.py  pyproject.toml  train.py
configs/: baseline_hidden.py  baseline_late.py  unimodal_audio.py  unimodal_text.py  unimodal_video.py
datasets/: multimodal_classification.py
models/: audio.py  fuse.py  fusion.py  text.py  video.py
sbatch/: dry-run-on-cpu.sh  training.sh
scripts/: move-slurm-logs.sh
utils/: collate.py  metrics.py
