[project]
name = "baseline"
version = "0.1.0"
description = "Baseline multimodal classification"
readme = "README.md"
requires-python = ">=3.12"
package = false
dependencies = [
    "pandas>=3.0.1",
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchcodec==0.11.0",
    "torchvision==0.25.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu130", marker = "sys_platform != 'darwin'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu130", marker = "sys_platform != 'darwin'" },
]
